# context-firewall

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  INSTALL.md  LICENSE  README.md  SECURITY.md  dist-workspace.toml
.antigravity/: mcp_config.json
.cursor/rules/: context-firewall.mdc
.gemini/: settings.json
.github/workflows/: ci.yml  release-smoke.yml  release.yml
crates/cfw-cli/: Cargo.toml
crates/cfw-cli/src/: main.rs
crates/cfw-cli/tests/: cli.rs
crates/cfw-codex/: Cargo.toml
crates/cfw-codex/src/: canary.rs  doctor.rs  install.rs  lib.rs
crates/cfw-core/: Cargo.toml
crates/cfw-core/src/: ids.rs  lib.rs  receipt.rs  span.rs  token.rs
crates/cfw-policy/: Cargo.toml
crates/cfw-policy/src/: lib.rs
crates/cfw-reducers/: Cargo.toml
crates/cfw-reducers/src/: browser.rs  generic.rs  git.rs  json.rs  lib.rs  log.rs  outline.rs  search.rs  test_output.rs
crates/cfw-reducers/tests/: real_corpus.rs  reducers.rs
crates/cfw-store/: Cargo.toml
crates/cfw-store/src/: paths.rs  sqlite.rs
docs/: codex-hook-native-roadmap.md  comparison.md  global-plan.md  implementation-plan.md  release-protocol.md  usage.md
scripts/: release-smoke.sh
