[workspace]
members = [
    "crates/cfw-cli",
    "crates/cfw-core",
    "crates/cfw-policy",
    "crates/cfw-store",
    "crates/cfw-reducers",
    "crates/cfw-codex",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/context-firewall/context-firewall"
homepage = "https://github.com/context-firewall/context-firewall"
description = "Local-first context firewall for coding agents"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.1"
blake3 = "1.8.2"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
directories = "6.0.0"
predicates = "3.1.3"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.24.0"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
