[package]
name = "cfw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true

[[bin]]
name = "cfw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
cfw-codex = { path = "../cfw-codex" }
cfw-core = { path = "../cfw-core" }
cfw-policy = { path = "../cfw-policy" }
cfw-reducers = { path = "../cfw-reducers" }
cfw-store = { path = "../cfw-store" }
chrono.workspace = true
clap.workspace = true
regex.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
