[package]
name = "cfw-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
cfw-core = { path = "../cfw-core" }
chrono.workspace = true
directories.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

